--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
       password: fatih
       host: localhost
       port: 27017
+      database: chat_app
       authentication-database: admin
-
 server:
   port: 8088
